Forgot to create the '/.cache' folder

--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel8_cuda10.1
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel8_cuda10.1
@@ -70,6 +70,7 @@ RUN chmod 777 /usr/libexec/s2i/run && \
     mkdir -p /.ansible/tmp && \
     chmod 777 /.ansible/tmp && \
     chmod 777 /.ansible && \
+    mkdir -p /.cache && \
     chmod -R 777 /.cache && \
     chmod 777 ${TOPDIR} && \
     touch //.gitconfig && \
