GPU checking requires sudo, so let's make the GPU check optional and turn it off in the s2i script

--- a/TensorFlow/playbooks/cudnn_installation/play.yaml
+++ b/TensorFlow/playbooks/cudnn_installation/play.yaml
@@ -15,10 +15,14 @@
     # This is the URL where Ansible will download cuDNN
     cudnn_url: '{{ cudnn | default("") }}'
 
+    # Check GPU
+    gpu_check: '{{ gpu_check | default("yes") }}'
+
   roles:
 
     # Check for NVIDIA (CUDA-capable) GPU
     - role: check_gpu
+      when: gpu_check == 'yes'
 
     # Install CUDNN
     - role: install_cudnn
