Adding missing curly braces ( the }} at the end of the variable line).

--- a/TensorFlow/playbooks/cudnn_installation/play.yaml
+++ b/TensorFlow/playbooks/cudnn_installation/play.yaml
@@ -9,7 +9,7 @@
     rhel_version: '{{ rhel_ver | default("7") }}'
 
     # This is the path to the CUDA installation you want to use
-    cuda_path: '{{ cuda_install_path | default("/usr/local/cuda")'
+    cuda_path: '{{ cuda_install_path | default("/usr/local/cuda") }}'
 
     # This is the URL where Ansible will download cuDNN
     cudnn_url: '{{ cudnn | default("") }}'
