--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel8_cuda10.1
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel8_cuda10.1
@@ -72,7 +72,8 @@ RUN cd ${FFTW_PREREQS_PLAYBOOK} && \
     pip3 install awscli
 
 # Create and give user permissions to modify certain directories that are required to run the Ansible
-# playbooks that are being pulled into this Dockerfile. Also allow /usr/local/cuda to be writable
+# playbooks that are being pulled into this Dockerfile. Also allow /usr/local/cuda to be writable and
+# allow /.aws to be writeable in case the user wants to use an AWS s3 bucket to download NCCL + cuDNN
 RUN chmod 777 /usr/libexec/s2i/run && \
     chmod g=u /etc/passwd /etc/group && \
     mkdir -p /.ansible/tmp && \
@@ -83,7 +84,9 @@ RUN chmod 777 /usr/libexec/s2i/run && \
     chmod 777 ${TOPDIR} && \
     touch //.gitconfig && \
     chmod 777 //.gitconfig && \
-    chmod -R 777 /usr/local/cuda
+    chmod -R 777 /usr/local/cuda && \
+    mkdir /.aws && \
+    chmod -R 777 /.aws
 
 # Set Ansible remote tmp
 RUN echo "remote_tmp = ${TOPDIR}/.ansible/tmp" >> ${FFTW_INSTALLATION}/ansible.cfg && \
