--- a/TensorFlow/playbooks/nccl_installation/roles/install_nccl_from_s3/tasks/main.yaml
+++ b/TensorFlow/playbooks/nccl_installation/roles/install_nccl_from_s3/tasks/main.yaml
@@ -18,6 +18,8 @@
 
 - name: Download S3 bucket NCCL tarball
   shell: aws s3 cp '{{ s3_bucket }}' '{{ nccl_download_dir }}'
+  environment:
+    AWS_DEFAULT_PROFILE: '{{ s3_profile }}'
 
 - name: Get tarball name
   shell: ls -p '{{ nccl_download_dir }}'
