--- a/TensorFlow/playbooks/cudnn_installation/play.yaml
+++ b/TensorFlow/playbooks/cudnn_installation/play.yaml
@@ -3,6 +3,9 @@
 - hosts: localhost
   connection: local
 
+  ################################################################################################
+  # Use these vars to run the playbook. Do not edit them here; modify them from the command line #
+  ################################################################################################
   vars:
 
     # Add variable to define whether to use RHEL 7 or 8
@@ -18,26 +21,27 @@
     gpu_check: '{{ gpu_check | default("yes") }}'
 
     # Use s3 bucket to download NCCL? If no, NCCL will be installed via URL.
-    use_s3: '{{ use_aws | default("no") }}'
+    use_s3_awscli: '{{ use_awscli | default("no") }}'
+
+    # AWS s3 *REQUIRED* params
+    s3_profile: '{{ aws_profile | default("null") }}'
+    s3_bucket: '{{ bucket | default("null") }}'
     
-    # AWS s3 params. All are REQUIRED when using s3.
+    # AWS s3 optional params
+    s3_add_credentials: '{{ add_aws_credentials | default("no") }}'
+    s3_delete_credentials: '{{ delete_aws_credentials_after_installation | default("no") }}'
     s3_access_key: '{{ aws_access_key | default("null") }}'
     s3_secret_access_key: '{{ aws_secret_access_key | default("null") }}'
     s3_region: '{{ aws_region | default ("us-east-1") }}'
-    s3_profile: '{{ aws_profile | default("null") }}'
-    s3_bucket: '{{ bucket | default("null") }}'
-    delete_aws_credentials: '{{ delete_aws_credentials_after_installation | default("no") }}'
 
+  ################################################################################################
+  #        The following roles will be executed and will call other roles in the process         #
+  ################################################################################################
   roles:
 
     # Check for NVIDIA (CUDA-capable) GPU
     - role: check_gpu
       when: gpu_check == 'yes'
 
-    # Install cuDNN from URL
-    - role: install_cudnn_from_url
-      when: use_s3 == 'no'
-
-    # Install cuDNN from s3 bucket
-    - role: install_cudnn_from_s3
-      when: use_s3 == 'yes'
+    # Install cuDNN. (This will call other roles; don't worry!)
+    - role: install
