Change 'mv' commands to 'cp' so that the files aren't 'deleted' from the EBS device. Also change NCCL's 'cmd' to 'shell'.

--- a/TensorFlow/playbooks/nccl_installation/roles/install_nccl_from_ebs/tasks/main.yaml
+++ b/TensorFlow/playbooks/nccl_installation/roles/install_nccl_from_ebs/tasks/main.yaml
@@ -10,5 +10,5 @@
     state: directory
     path: '{{ nccl_agnostic_install_path }}'
 
-- name: Move {{ ebs_dir }}/nccl contents to {{ nccl_agnostic_install_path }}
-  command: mv '{{ ebs_dir }}/nccl/*' '{{ nccl_agnostic_install_path }}'
+- name: Copy {{ ebs_dir }}/nccl contents to {{ nccl_agnostic_install_path }}
+  shell: cp '{{ ebs_dir }}/nccl/*' '{{ nccl_agnostic_install_path }}'
