--- a/TensorFlow/playbooks/cudnn_installation/roles/get_cudnn_from_ebs/tasks/main.yaml
+++ b/TensorFlow/playbooks/cudnn_installation/roles/get_cudnn_from_ebs/tasks/main.yaml
@@ -1,5 +1,5 @@
 ---
 
 # Move cuDNN from ebs to '{{ cudnn_download_dir }}'
-- name: Move specified cuDNN from EBS to {{ cudnn_download_dir }}.
-  shell: 'mv {{ cudnn_ebs_dir }}/{{ cudnn_folder }} {{ cudnn_download_dir }}'
+- name: Copy cuDNN from EBS to {{ cudnn_download_dir }}.
+  shell: 'cp {{ cudnn_ebs_dir }}/{{ cudnn_folder }}/* {{ cudnn_download_dir }}'
