Should be 'cp -R', not just 'cp'.

--- a/TensorFlow/playbooks/nccl_installation/roles/install_nccl_from_ebs/tasks/main.yaml
+++ b/TensorFlow/playbooks/nccl_installation/roles/install_nccl_from_ebs/tasks/main.yaml
@@ -11,4 +11,4 @@
     path: '{{ nccl_agnostic_install_path }}'
 
 - name: Copy {{ ebs_dir }}/nccl contents to {{ nccl_agnostic_install_path }}
-  shell: cp '{{ ebs_dir }}/nccl/*' '{{ nccl_agnostic_install_path }}'
+  shell: 'cp -R {{ ebs_dir }}/nccl/* {{ nccl_agnostic_install_path }}'
