Adding quotes around '7' and '8' because these steps were being skipped when they should not have been.

--- a/TensorFlow/playbooks/cuda_optional_installation/roles/check_gpu/tasks/main.yaml
+++ b/TensorFlow/playbooks/cuda_optional_installation/roles/check_gpu/tasks/main.yaml
@@ -2,11 +2,11 @@
 
 - name: RHEL 7 --> Install lspci
   yum: pkg=pciutils
-  when: rhel_version == 7
+  when: rhel_version == '7'
 
 - name: RHEL 8 --> Install lspci
   dnf: pkg=pciutils
-  when: rhel_version == 8
+  when: rhel_version == '8'
 
 - name: Check for a CUDA-capable GPU
   shell: 'lspci | grep -i nvidia'
