--- a/TensorFlow/playbooks/cuda_optional_installation/play.yaml
+++ b/TensorFlow/playbooks/cuda_optional_installation/play.yaml
@@ -13,7 +13,7 @@
     rhel_version: '{{ rhel_ver | default("8") }}'
 
     # Add variable to define which CUDA version is being used
-    cuda_version: '{{ cuda_ver | default("10-1")'
+    cuda_version: '{{ cuda_ver | default("10-1") }}'
 
   ################################################################################################
   #        The following roles will be executed and will call other roles in the process         #
