--- a/TensorFlow/playbooks/cudnn_installation/roles/install/tasks/main.yaml
+++ b/TensorFlow/playbooks/cudnn_installation/roles/install/tasks/main.yaml
@@ -18,11 +18,11 @@
 
 # Next step is to move all the files from cuDNN to their appropriate paths under the
 # {{ cuda_path }} folder
-- name: Move cudnn.h to {{ cuda_path }}/include
-  shell: mv '{{ cudnn_download_dir }}/include/cudnn.h' '{{ cuda_path }}/include/cudnn.h'
+- name: Copy cudnn.h to {{ cuda_path }}/include
+  shell: cp '{{ cudnn_download_dir }}/include/cudnn.h' '{{ cuda_path }}/include/cudnn.h'
 
-- name: Move cuDNN libs to {{ cuda_path }}/lib64
-  shell: mv '{{ cudnn_download_dir }}/lib64/*' '{{ cuda_path }}/lib64/'
+- name: Copy cuDNN libs to {{ cuda_path }}/lib64
+  shell: cp '{{ cudnn_download_dir }}/lib64/*' '{{ cuda_path }}/lib64/'
 
 # Finally, do some clean up: Remove the temporary download dir because we don't need
 # it anymore
