--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel8_cuda10.1
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel8_cuda10.1
@@ -104,6 +104,9 @@ RUN groupadd -r default && \
 # Set user to 'default'
 USER default
 
+# Set home dir
+ENV HOME=/home
+
 WORKDIR ${TOPDIR}
 
 CMD ["/usr/libexec/s2i/usage"]
