Create /home/.cache/bazel folder and allow non-root to write to it.

--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel8_cuda10.1
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel8_cuda10.1
@@ -91,6 +91,8 @@ RUN chmod 777 /usr/libexec/s2i/run && \
     chmod 777 //.gitconfig && \
     chmod -R 777 /usr/local/cuda && \
     mkdir /.aws && \
+    mkdir -p /home/.cache/bazel && \
+    chmod -R 777 /home/.cache/bazel && \
     chmod -R 777 /.aws
 
 # Set Ansible remote tmp
