Adding cupti since TensorFlow requires it

--- a/TensorFlow/playbooks/cuda_optional_installation/roles/install/tasks/main.yaml
+++ b/TensorFlow/playbooks/cuda_optional_installation/roles/install/tasks/main.yaml
@@ -6,6 +6,7 @@
     name:
       - cuda-core-{{ cuda_version }}
       - cuda-cudart-dev-{{ cuda_version }}
+      - cuda-cupti-{{ cuda_version }}
       - cuda-misc-headers-{{ cuda_version }}
   when: rhel_version == '7'
 
@@ -15,5 +16,6 @@
     name:
       - cuda-core-{{ cuda_version }}
       - cuda-cudart-dev-{{ cuda_version }}
+      - cuda-cupti-{{ cuda_version }}
       - cuda-misc-headers-{{ cuda_version }}
   when: rhel_version == '8'
