Need 'cuda-curand' and 'cuda-curand-dev' to build TensorFlow

--- a/TensorFlow/playbooks/cuda_optional_installation/roles/install/tasks/main.yaml
+++ b/TensorFlow/playbooks/cuda_optional_installation/roles/install/tasks/main.yaml
@@ -7,6 +7,8 @@
       - cuda-core-{{ cuda_version }}
       - cuda-cudart-dev-{{ cuda_version }}
       - cuda-cupti-{{ cuda_version }}
+      - cuda-curand-{{ cuda_version }}
+      - cuda-curand-dev-{{ cuda_version }}
       - cuda-cusolver-{{ cuda_version }}
       - cuda-cusolver-dev-{{ cuda_version }}
       - cuda-misc-headers-{{ cuda_version }}
@@ -20,6 +22,8 @@
       - cuda-core-{{ cuda_version }}
       - cuda-cudart-dev-{{ cuda_version }}
       - cuda-cupti-{{ cuda_version }}
+      - cuda-curand-{{ cuda_version }}
+      - cuda-curand-dev-{{ cuda_version }}
       - cuda-cusolver-{{ cuda_version }}
       - cuda-cusolver-dev-{{ cuda_version }}
       - cuda-misc-headers-{{ cuda_version }}
