--- a/TensorFlow/playbooks/cuda_optional_installation/roles/install/tasks/main.yaml
+++ b/TensorFlow/playbooks/cuda_optional_installation/roles/install/tasks/main.yaml
@@ -13,6 +13,8 @@
       - cuda-curand-dev-{{ cuda_version }}
       - cuda-cusolver-{{ cuda_version }}
       - cuda-cusolver-dev-{{ cuda_version }}
+      - cuda-cusparse-{{ cuda_version }}
+      - cuda-cusparse-dev-{{ cuda_version }}
       - cuda-misc-headers-{{ cuda_version }}
       - libcublas-devel
   when: rhel_version == '7'
@@ -30,6 +32,8 @@
       - cuda-curand-dev-{{ cuda_version }}
       - cuda-cusolver-{{ cuda_version }}
       - cuda-cusolver-dev-{{ cuda_version }}
+      - cuda-cusparse-{{ cuda_version }}
+      - cuda-cusparse-dev-{{ cuda_version }}
       - cuda-misc-headers-{{ cuda_version }}
       - libcublas-devel
   when: rhel_version == '8'
