--- a/TensorFlow/playbooks/cuda_optional_installation/play.yaml
+++ b/TensorFlow/playbooks/cuda_optional_installation/play.yaml
@@ -15,6 +15,9 @@
     # Add variable to define which CUDA version is being used
     cuda_version: '{{ cuda_ver | default("10-1") }}'
 
+    # Install cuda toolkit?
+    install_cuda_toolkit: '{{ install_toolkit | default("yes") }}'
+
   ################################################################################################
   #        The following roles will be executed and will call other roles in the process         #
   ################################################################################################
