Should be 'libXrandr_build_dir', not 'libXrandnr_build_dir'. There is an extra N by mistake.

--- a/TensorFlow/playbooks/cuda_optional_installation/roles/install_cuda_toolkit_deps/tasks/main.yaml
+++ b/TensorFlow/playbooks/cuda_optional_installation/roles/install_cuda_toolkit_deps/tasks/main.yaml
@@ -27,7 +27,7 @@
     - '{{ libXmu_build_dir }}'
     - '{{ libX11_build_dir }}'
     - '{{ libXi_build_dir }}'
-    - '{{ libXrandnr_build_dir }}'
+    - '{{ libXrandr_build_dir }}'
     - '{{ freeglut_build_dir }}'
     - '{{ mesa_build_dir }}'
     - '{{ xkbcommon_build_dir }}'
